// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with ProgressBar props 1`] = `
Object {
  "aria-valuemax": 100,
  "aria-valuemin": 0,
  "aria-valuenow": 50,
  "children": <Box
    className="css-1bsu0i0 css-63it0p css-nkssow bb-Box bb-ProgressBarIndicator"
  />,
  "className": "css-i19h14 css-63it0p css-nkssow bb-Box bb-ProgressBar",
  "role": "progressbar",
}
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint,#000000);
}

.emotion-2 {
  height: 100%;
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 test bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 test bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`overrides ProgressBar.Indicator.base should render correctly 1`] = `
.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint,#000000);
}

.emotion-2 {
  height: 100%;
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-2 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`overrides ProgressBar.base should render correctly 1`] = `
.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 100%;
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint,#000000);
}

.emotion-4 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint,#000000);
}

.emotion-2 {
  height: 100%;
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint,#000000);
}

.emotion-2 {
  height: 100%;
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly with maxValue 1`] = `
.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint,#000000);
}

.emotion-2 {
  height: 100%;
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 33.33333333333333%;
}

<div
  aria-valuemax="150"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly with size 1`] = `
.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 100%;
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint,#000000);
  height: 2rem;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`theming ProgressBar.Indicator.base should render correctly 1`] = `
.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint,#000000);
}

.emotion-2 {
  height: 100%;
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-2 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`theming ProgressBar.base should render correctly 1`] = `
.emotion-3 {
  color: var(--bb-palette-primary,#000000) !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 100%;
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint,#000000);
}

.emotion-4 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;
